# lagun

./: .dockerignore  .gitignore  .pre-commit-config.yaml  BIG_PICTURE.md  CLAUDE.md  README.md  TASKS.md  compose.yml  dev  flake.nix  pyproject.toml  questions.md
.claude/: settings.local.json
.claude/skills/spec-0-create/: SKILL.md
.claude/skills/spec-0-create/script/: create-spec.sh
.claude/skills/spec-1-understand/: SKILL.md
.claude/skills/spec-2-design-implementation/: SKILL.md
.claude/skills/spec-3-task-up/: SKILL.md
.claude/skills/spec-4-do-task-with-human-intervention/: SKILL.md
.claude/skills/spec-4-execute-tasks/: SKILL.md
.claude/skills/spec-4-execute-tasks-with-human-intervention/: SKILL.md
.claude/skills/spec-5-amend/: SKILL.md
.claude/skills/spec-5-complete-task/: SKILL.md
.claude/skills/spec-5-finalize/: SKILL.md
specs/: agent-container.md  fish-shell.md  in-container-containers.md  in-container-git-hooks.md  in-container-nix.md  lagun-consumer-can-install-packages-in-lagun-base-image.md  onecli-agent-auth.md  onecli-ca-certificate.md  skills-for-spec-management.md
